# asb-subs-to-discord

./: README.md
bot/: Cargo.toml
bot/src/: main.rs
extension/: background.js  content.js  index.html  index.js  manifest.json
